kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template: 
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: rensfhictdocker/frontend:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5018
